[gd_scene load_steps=5 format=2]

[ext_resource path="res://tests/TestMenu.gd" type="Script" id=1]
[ext_resource path="res://gui/TiaoLetter.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://gui/LoadingScreen.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[node name="TestMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="MenuScreen" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MenuScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -158.5
margin_right = 125.0
margin_bottom = 158.5
rect_min_size = Vector2( 250, 0 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="MenuScreen/VBoxContainer"]
margin_right = 250.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
text = "Choose a test!"
align = 1

[node name="ItemList" type="ItemList" parent="MenuScreen/VBoxContainer"]
margin_top = 43.0
margin_right = 250.0
margin_bottom = 293.0
rect_min_size = Vector2( 250, 250 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="MenuScreen/VBoxContainer"]
margin_top = 297.0
margin_right = 250.0
margin_bottom = 317.0
text = "Launch"

[node name="LoadingScreen" parent="." instance=ExtResource( 3 )]
visible = false
margin_right = 1024.0
margin_bottom = 600.0
[connection signal="pressed" from="MenuScreen/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="loading_complete" from="LoadingScreen" to="." method="_on_LoadingScreen_loading_complete"]
[connection signal="loading_failed" from="LoadingScreen" to="." method="_on_LoadingScreen_loading_failed"]
